tdf#122943 Don't add properties to style when Highlighting and Area

...tab pages are simply visited

Change-Id: I490275bf7e27160d312bb5b6ad7001298549f7e8